# esp32c6-led-web

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.github/workflows/: publish-firmware.yml
main/: CMakeLists.txt  app_main.cpp
